RESOLVED FIXED140670
Fix cast-align warning in Source/WebCore/platform/efl/EflScreenUtilities.cpp
https://bugs.webkit.org/show_bug.cgi?id=140670
Summary Fix cast-align warning in Source/WebCore/platform/efl/EflScreenUtilities.cpp
Csaba Osztrogonác
Reported 2015-01-20 03:45:45 PST
../../Source/WebCore/platform/efl/EflScreenUtilities.cpp:134:39: warning: cast from 'unsigned char *' to 'int *' increases required alignment from 1 to 4 [-Wc ast-align] return ecore_x_cursor_new(window, (int*)(buffer), cursorSize.width(), cursorSize.height(), hotSpot.x(), hotSpot.y()); ^~~~~~~~~~~~~~ 1 warning generated. ---- The buffer is the return value of cairo_image_surface_get_data() which is guaranteed to be 4 byte aligned, it's safe to cast to int* .
Attachments
Patch (1.50 KB, patch)
2015-01-20 03:46 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-01-20 03:46:31 PST
WebKit Commit Bot
Comment 2 2015-01-21 00:46:40 PST
Comment on attachment 244981 [details] Patch Clearing flags on attachment: 244981 Committed r178821: <http://trac.webkit.org/changeset/178821>
WebKit Commit Bot
Comment 3 2015-01-21 00:46:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.