Fix cast-align warning in Source/WebCore/platform/efl/EflScreenUtilities.cpp https://bugs.webkit.org/show_bug.cgi?id=140670

Reviewed by Darin Adler.

* platform/efl/EflScreenUtilities.cpp:
(WebCore::createCustomCursor):


Canonical link: https://commits.webkit.org/158699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178821 268f45cc-cd09-0410-ab3c-d52691b4dbfc